--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -161,3 +161,13 @@ nav{
       text-decoration: none;
   }
 }
+
+#cloth{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  canvas {
+    position: absolute;
+  }
+}
