--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -599,14 +599,65 @@ header {
         }
 
     }
-
-
-
   }
-
 
 }
 
+.analyse-container {
+  background-color: rgba(255,255,255,0.9);
+  z-index: 2;
+  position: absolute;
+
+  .analyse {
+    padding: 45px;
+    width: 60%;
+    left: 0px;
+    right: 0px;
+    margin: auto;
+  }
+
+  .exitAnalyse {
+    cursor: pointer;
+    background-color: $purple-dark;
+    padding: 10px 15px 10px 15px;
+    margin-bottom: 10px;
+    color: white;
+    font-family: $baseFont, monospace;
+    font-size: 20px;
+    font-weight: 700;
+  }
+
+  .secondPart {
+    margin-top: 30px;
+  }
+
+  h3{
+    color: $turquoise;
+    font-family: $titleFont, monospace;
+    font-size: 2em;
+    margin-top: 15px;
+
+
+    span{
+      background-color: $purple-dark;
+      padding: 5px 15px 5px 15px;
+      line-height: 56px;
+    }
+  }
+
+  p{
+    margin-top: 30px;
+    font-family: $baseFont, monospace;
+    font-weight: 600;
+    color: $purple-dark;
+    line-height: 23px;
+
+    span{
+      background-color: $turquoise;
+    }
+
+  }
+}
 
 
 //end
