--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -31,6 +31,10 @@ body {
   box-sizing: border-box;
 }
 
+.noScroll{
+  overflow: hidden;
+}
+
 .purple-back {
   background: $purple;
 }
@@ -85,7 +89,9 @@ header {
 
   nav {
     width: 30%;
-
+    align-self: flex-start;
+    margin-top: 15%;
+    z-index: 2;
     &::after {
       content: '';
       height: 100vh;
@@ -95,14 +101,17 @@ header {
       position: absolute;
       top: 0;
     }
-
+    ul {
+      position: fixed;
+      top: 10%;
+    }
     .nav-icon {
-      background: $turquoise;
+      background-color: $turquoise;
       width: 40px;
       min-width: 40px;
       height: 30px;
       position: relative;
-
+      transition: background-color ease-in-out 0.5s;
       img {
         width: 50px;
         position: absolute;
@@ -111,45 +120,58 @@ header {
     }
 
     .nav-label {
-      background: $purple-dark;
-      color: $white;
-      font-family: $titleFont;
-      font-size: 1.4rem;
-      line-height: 30px;
-      padding: 0 15px;
+      overflow: hidden;
+      p{
+        color: $white;
+        font-family: $titleFont;
+        font-size: 1.4rem;
+        background: $purple-dark;
+        line-height: 30px;
+        padding: 0 15px;
+        transition: transform ease-in 0.5s;
+      }
     }
 
     li {
+      cursor: pointer;
       display: flex;
       justify-content: center;
-      align-items: center;
-      justify-content: center;
-
-      &:nth-of-type(2n) {
-        padding-left: 160px;
-
+      &:hover{
         .nav-icon {
+          background-color: $white;
+        }
+        .nav-label p {
+          transform: translateX(0) !important;
+        }
+      }
+      .nav-label.active p {
+        transform: translateX(0);
+      }
+      &:nth-of-type(2n) {
+        padding-left: 166px;
+        .nav-icon {
+          z-index: 4;
           img {
             right: -5px;
           }
         }
-
-        .nav-label {
-          padding-left: 30px;
+        .nav-label p {
+          transform: translateX(-115px);
         }
       }
 
       &:nth-of-type(2n+1) {
-        padding-right: 137px;
-
+        padding-right: 120px;
         .nav-icon {
           img {
             left: -5px;
           }
         }
-
-        .nav-label {
-          padding-right: 30px;
+        .nav-label p {
+          transform: translateX(111px);
+        }
+        .nav-label.active p {
+          transform: translateX(0);
         }
       }
     }
@@ -364,7 +386,7 @@ header {
       bottom: 0;
       margin: auto;
       img {
-        height: 100%;
+        height: 120%;
         filter: grayscale(100%);
         z-index: -1;
       }
@@ -402,23 +424,20 @@ header {
   }
 }
 
-.sourcesList{
+.sourcesList, .sourcesListBack {
   position: fixed;
   right: -25%;
   top: 0;
   height: 100vh;
   width: 25%;
   min-width: 200px;
+}
+
+.sourcesList{
   background: $purple-dark;
   transition: right ease-in-out 1s;
 }
 .sourcesListBack {
-  position: fixed;
-  right: -25%;
-  top: 0;
-  height: 100vh;
-  width: 25%;
-  min-width: 200px;
   background: $turquoise;
   transition: right ease-in-out 0.5s;
 }
@@ -432,32 +451,30 @@ header {
 }
 
 
-
-
 //romain
 
 .mustHave {
   margin-bottom: 100px;
-
+  background: $white;
+  position: relative;
+  .timeline{
+    z-index: 0;
+  }
   .mustHaveArticles{
     padding-left: 15%;
     display: flex;
     max-width: 600px;
-
     .articlesRight {
-
       &:nth-child(1){
         &:nth-last-child(){
           height: 2px;
         }
       }
-
       &:nth-child(2){
         &:nth-last-child(){
           height: 20px;
         }
       }
-
       .mustHave-item-container{
         &:nth-of-type(1) {
           width: 90%;
@@ -468,13 +485,9 @@ header {
           width: 130%;
           height: 377px;
         }
-
       }
-
     }
-
     .articlesLeft {
-
       margin-top: 30px;
       .mustHave-item-container{
         &:nth-of-type(1) {
@@ -489,23 +502,15 @@ header {
       }
 
     }
-
   }
-
-
   .mustHave-item-container {
     cursor: pointer;
-
-
     .mustHave-item-hover{
       opacity: 0;
       transition :opacity 0.5s ease-in-out;
       font-family: $titleFont, monospace;
-      z-index:0;
       padding: 30px;
       background-color: rgba(112,0,255, 0.75);
-
-
       h3 {
         color: $turquoise;
         text-transform: uppercase;
@@ -513,24 +518,18 @@ header {
         letter-spacing: 1px;
         margin-bottom: 15px;
       }
-
       p{
         color: white;
         font-family: $titleFont, monospace;
         line-height: 20px;
-
       }
-
     }
-
     &:hover .mustHave-item-hover{
       opacity: 1;
     }
-
     .overlay {
-          z-index: -1;
+          z-index: 0;
     }
-
     .mustHave-item {
       height: 90%;
       width: 90%;
@@ -539,18 +538,15 @@ header {
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
-      z-index: -1;
+      z-index: 1;
     }
-
     .mustHave-item-back {
+      z-index: 0;
       position: absolute;
     }
-
     &.purple {
-
         .mustHave-item {
             border: solid 5px $purple-dark;
-
           .mustHave-title {
             width: auto;
             display: flex;
@@ -603,11 +599,33 @@ header {
 
 }
 
+.analyse-container.analyse-container-active{
+  opacity: 1;
+  top: 0;
+  z-index: 2;
+}
+.analyse-container-back.analyse-container-back-active{
+  opacity: 1;
+  top: -100%;
+}
+
+.analyse-container-back {
+  position: fixed;
+  top: 100%;
+  width: 100%;
+  height: 100vh;
+  background-color: $purple;
+  z-index: 3;
+  transition: top ease-in-out 1s;
+}
+
 .analyse-container {
   background-color: rgba(255,255,255,0.9);
-  z-index: 2;
+  z-index: -1;
+  opacity: 0;
   position: absolute;
-
+  top : 100%;
+  transition: top ease-in-out 1s, opacity ease 0.2s, z-index ease 0.3s;
   .analyse {
     padding: 45px;
     width: 60%;
@@ -636,26 +654,22 @@ header {
     font-family: $titleFont, monospace;
     font-size: 2em;
     margin-top: 15px;
-
-
     span{
       background-color: $purple-dark;
       padding: 5px 15px 5px 15px;
       line-height: 56px;
     }
   }
-
   p{
     margin-top: 30px;
     font-family: $baseFont, monospace;
-    font-weight: 600;
+    font-weight: 400;
+    line-height: 1.5em;
     color: $purple-dark;
-    line-height: 23px;
-
     span{
       background-color: $turquoise;
+      font-weight: 500;
     }
-
   }
 }
 
