--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -607,7 +607,7 @@ header {
   background-color: rgba(255,255,255,0.9);
   z-index: 2;
   position: absolute;
-
+display: none;
   .analyse {
     padding: 45px;
     width: 60%;
