--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -405,6 +405,9 @@ header {
   }
 }
 
+
+// MUST HAVE STYLE
+
 .mustHave-item-container{
   position: relative;
   .mustHave-item-back, .overlay{
@@ -457,14 +460,63 @@ header {
   margin-bottom: 100px;
   background: $white;
   position: relative;
+  margin-top: 200px;
+
+  .hover-1{
+    height: 218px;
+  }
+
+  .hover-2{
+    height: 317px;
+  }
+
+  .hover-3{
+    height: 240px;
+  }
+
+  .hover-4{
+    height: 212px;
+  }
+
+  &>p{
+    background-color: $turquoise;
+    width: 10px;
+    line-height: 35px;
+    width: 59px;
+    text-align: center;
+    height: 56px;
+    font-family: $titleFont, monospace;
+    font-size: 3em;
+    letter-spacing: 4px;
+    position: relative;
+    left: 12.5%;
+  }
+
+  .big {
+    color: white;
+    font-family: $titleFont, monospace;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+
+   span {
+     background-color: $purple-dark;
+     margin-top: 10px;
+     margin-left: 19%;
+     padding: 5px 10px 5px 10px;
+     font-size: 30px;
+   }
+  }
+
   .timeline{
     z-index: 0;
   }
   .mustHaveArticles{
     padding-left: 15%;
-    display: flex;
-    max-width: 600px;
+    display: -webkit-box;
+    max-width: 460px;
     .articlesRight {
+      width: 300px;
       &:nth-child(1){
         &:nth-last-child(){
           height: 2px;
@@ -489,6 +541,7 @@ header {
     }
     .articlesLeft {
       margin-top: 30px;
+      width: 300px;
       .mustHave-item-container{
         &:nth-of-type(1) {
           width: 100%;
@@ -505,18 +558,27 @@ header {
   }
   .mustHave-item-container {
     cursor: pointer;
+    z-index:1;
+    display: flex;
+    flex-direction: column;
     .mustHave-item-hover{
       opacity: 0;
       transition :opacity 0.5s ease-in-out;
       font-family: $titleFont, monospace;
       padding: 30px;
       background-color: rgba(112,0,255, 0.75);
+      z-index: 0;
+      display: flex;
+      flex-direction: column;
       h3 {
         color: $turquoise;
         text-transform: uppercase;
         font-size: 1.5em;
         letter-spacing: 1px;
         margin-bottom: 15px;
+        display: flex;
+        align-items: flex-start;
+        flex-direction: column;
       }
       p{
         color: white;
@@ -538,11 +600,12 @@ header {
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
-      z-index: 1;
+      z-index: -1
+
     }
     .mustHave-item-back {
-      z-index: 0;
       position: absolute;
+      z-index: -1;
     }
     &.purple {
         .mustHave-item {
@@ -598,6 +661,9 @@ header {
   }
 
 }
+
+
+// ANALYSE STYLE
 
 .analyse-container.analyse-container-active{
   opacity: 1;
