--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -33,6 +33,7 @@ body {
 
 .noScroll{
   overflow: hidden;
+  height: 100vh;
 }
 
 .purple-back {
@@ -84,6 +85,7 @@ header {
 
     &.white {
       color: $white;
+      font-weight: 600;
     }
   }
 
@@ -138,7 +140,7 @@ header {
       justify-content: center;
       &:hover{
         .nav-icon {
-          background-color: $white;
+          background-color: $purple;
         }
         .nav-label p {
           transform: translateX(0) !important;
@@ -197,7 +199,6 @@ header {
     right: 0;
     z-index: 90;
     transform: rotate(-90deg);
-
     a {
       color: $turquoise;
       text-decoration: none;
@@ -308,6 +309,18 @@ header {
         right: -26px;
         top: 6px;
         background-color: $turquoise;
+        transition: letter-spacing ease 0.4s, right ease 0.4s;
+      }
+      .seeMore:hover{
+        letter-spacing: 7px;
+        right: -29px;
+      }
+      .goToSite{
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 50px;
+        transform: rotate(90deg);
       }
 
       h3 {
@@ -347,7 +360,9 @@ header {
       margin-left: 12px;
       margin-top: 30px;
       z-index: -1;
-
+      opacity: 0;
+      transform: translateX(-125%);
+      transition: transform ease-out 1s, opacity ease 0.6s;
       ul {
         list-style: none;
 
@@ -374,6 +389,10 @@ header {
         }
       }
     }
+    .opinion-active {
+      opacity: 1;
+      transform: translateX(0);
+    }
 
     .imageArticle {
       z-index: -2;
@@ -385,11 +404,22 @@ header {
       top: 0;
       bottom: 0;
       margin: auto;
+      transform: translateY(150px);
+      opacity: 0;
+      transition: transform ease-in 0.5s, opacity ease-in 0.5s;
       img {
         height: 120%;
         filter: grayscale(100%);
         z-index: -1;
       }
+    }
+    .imageArticle-animation-enter {
+      opacity: 1;
+      transform: translateY(0);
+    }
+    .imageArticle-animation-out {
+      opacity: 0;
+      transform: translateY(-150px);
     }
   }
 }
@@ -431,11 +461,13 @@ header {
   height: 100vh;
   width: 25%;
   min-width: 200px;
+  padding: 10px 30px;
+  box-sizing: border-box;
 }
 
 .sourcesList{
   background: $purple-dark;
-  transition: right ease-in-out 1s;
+  transition: right ease-in-out 0.8s;
 }
 .sourcesListBack {
   background: $turquoise;
@@ -450,6 +482,14 @@ header {
   right: 0;
 }
 
+.sourcesList-item{
+  padding-top: 5px;
+  font-size: 0.7em;
+  line-height: 1.5em;
+  a {
+    color: $white;
+  }
+}
 
 //romain
 
@@ -614,7 +654,7 @@ header {
   top: 100%;
   width: 100%;
   height: 100vh;
-  background-color: $purple;
+  background-color: $purple-dark;
   z-index: 3;
   transition: top ease-in-out 1s;
 }
